--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>TODO LIST</h1>
-    <input id="todo-contents" />
+    <input id="todo-contents" placeholder="please write todo.." />
     <button id="todo-input">입력</button>
     <h2>ToDo...</h2>
     <ul id="todo-list" style="list-style-type: none; padding: 0"></ul>
