웹팩 번들링 render만 구현된 것

--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Todo</title>
+    <title>Document</title>
+    <script defer src="dist/main.js"></script>
     <script defer src="main.js"></script>
   </head>
   <body>
-    <h1>TODO LIST</h1>
-    <input id="todo-contents" placeholder="please write todo.." />
-    <button id="todo-input">입력</button>
-    <h2>ToDo...</h2>
-    <ul id="todo-list" style="list-style-type: none; padding: 0"></ul>
-    <h2>Done...</h2>
-    <ul id="done-list" style="list-style-type: none; padding: 0"></ul>
+    <h1>TODO 리스트</h1>
+
+    <a href="sample.html">샘플로 이동</a>
+
+    <div id="container">
+      <input id="todo-contents" />
+
+      <ul id="todo-list" style="list-style-type: none; padding: 0"></ul>
+
+      <ul id="done-list" style="list-style-type: none; padding: 0"></ul>
+    </div>
   </body>
 </html>
