--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
     <script defer src="dist/main.js"></script>
     <script defer src="main.js"></script>
   </head>
-  <body>
+  <body id="contents">
     <h1>TODO 리스트</h1>
 
     <a href="sample.html">샘플로 이동</a>
 
-    <div id="container">
+    <!-- <div id="container">
       <input id="todo-contents" />
-
       <ul id="todo-list" style="list-style-type: none; padding: 0"></ul>
-
       <ul id="done-list" style="list-style-type: none; padding: 0"></ul>
-    </div>
+    </div> -->
   </body>
 </html>
